@@ -65,8 +65,11 @@ Trunk -  Unreleased
     HIVE-780. Better error messages for wrong argument lengths in UDAFs
     (Zheng Shao via namit)
 
-    HIVE-790. racce conditions with script and union operators
+    HIVE-790. race conditions with script and union operators
     (Ning Zhang via namit)
+
+    HIVE-798. remove UDAFSum and UDAFCount
+    (Zheng Shao via namit)
 
 Release 0.4.0 -  Unreleased
 
